--- a/style.css
+++ b/style.css
@@ -9,29 +9,28 @@ body,html{
 }
 
 .container {
-    text-align: center;
     height: 100%;
-    padding: 16px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 450px 450px 450px 450px;
-    grid-template-rows: 225px 225px 225px 225px;
+    grid-template-columns: 350px 500px 500px 480px;
+    grid-template-rows: 225px 250px 250px 400px;
 }
 
 .header {
-    background-color: #006157;
     grid-column: 2/5;
     grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: beige;
   }
   
 .sidebar {
-    background-color: #005B94;
+    background-color: #15acf1;
     grid-column: 1/2;
     grid-row: 1/5;
     color: beige;
-    font-size: 32px;
     padding: 16px;
-    font-weight: 700;
     display: flex;
     flex-direction: column;
     gap: 48px;
@@ -63,15 +62,15 @@ body,html{
 }
 
 .site-maintenance{
-    background-color: chartreuse;
+    background-color: beige;
 }
 
 .community{
-    background-color: chocolate;
+    background-color: beige;
 }
 
 .update-privacy{
-    background-color: coral;
+    background-color: beige;
 }
 
 .trending{
@@ -80,10 +79,12 @@ body,html{
 
 .projects{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
     gap: 15px;
     border-radius: 15px;
+    grid-row: 1/3;
+    border-left: 2px solid yellow;
 }
 
 .main-content{
@@ -94,9 +95,6 @@ body,html{
     grid-row: 2/5;
 }
 
-.projects{
-    grid-row: 1/3;
-}
 
 .dashboard{
     display: flex;
@@ -106,7 +104,123 @@ body,html{
 
 .main-content div{
     font-size: 16px;
-    padding: 12px;
+    padding: 16px;
     border-radius: 12px;
 }
 
+.dashboard div{
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.first, .second div{
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.first, .second{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 20px;
+}
+
+.search-button img{
+    width: auto;
+    height: 24px;
+}
+
+.bell-icon img{
+    width: auto;
+    height: 24px;
+}
+
+.profile-image-one img{
+    width: auto;
+    height: 32px;
+}
+
+.profile-name{
+    font-weight: 500;
+    font-size: 24px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.profile-image-two img{
+    width: auto;
+    height: 48px;
+}
+
+.top{
+    display: flex;
+    gap: 100px;
+    align-items: center;
+    padding: 16px;
+}
+
+form input{ 
+    width: 1000px;
+    height: 32px;
+    border-radius: 12px;
+    border: none;
+}
+
+.top-left{
+    display: flex;
+    gap: 16px;
+}
+
+.top-right{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.bottom{
+    display: flex;
+    align-items: center;
+    gap: 600px;
+    margin-bottom: 32px;
+}
+
+.bottom-left{
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    padding: 16px;
+}
+
+.greeting{
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.bottom-right button{
+    width: 100px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #15acf1;
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.bottom-right{
+    display: flex;
+    gap: 32px;
+}
+
+.announcements{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.projects div{
+    background-color: beige;
+}
+
+.trending{
+    background-color: beige;
+}
